# auk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: cpm.cmake  external.cmake
include/: auk.h  log.h  tinysdl.h  window.h
include/auk/graphics/: color.h  graphics.h  renderer.h  shader.h  sprite_batch.h  target.h  texture.h
include/auk/input/: input.h  keys.h  virtualaxis.h  virtualbutton.h  virtualinput.h
include/auk/numerics/: linalg.h  mathf.h  matrix.h  rect.h
include/auk/platform/: app.h  file.h  log.h  time.h  type_id.h  window.h
include/auk/util/: packer.h  state_machine.h  svector.h  type_table.h  virtual_map.h
include/tinysdl/core/: log.h  window.h
include/tinysdl/graphics/: color.h  graphics.h  renderer.h  shader.h  target.h  texture.h
include/tinysdl/math/: matrix.h
include/tinysdl/matrix/: color.h  math.h  matrix.h  rect.h
include/tinysdl/numerics/: linalg.h  mathf.h  matrix.h  matrix_math.h  rect.h  scalar.h
include/tinysdl/platform/: file.h  log.h  time.h  type_id.h  window.h
src/: graphics.cpp  log.cpp  window.cpp
src/core/: file.cpp  log.cpp  window.cpp
src/graphics/: color.cpp  graphics.cpp  renderer.cpp  shader.cpp  sprite_batch.cpp  target.cpp  texture.cpp
src/input/: input.cpp  virtualaxis.cpp  virtualbutton.cpp
src/matrix/: color.cpp
src/numerics/: linalg.cpp  mathf.cpp  matrix_math.cpp
src/platform/: app.cpp  file.cpp  log.cpp  time.cpp  window.cpp
src/util/: packer.cpp
